--- a/pages/covid_acp.html
+++ b/pages/covid_acp.html
@@ -17,6 +17,10 @@
   </script>
   <title data-fr="Projet : ACP COVID-19" data-en="Project: COVID-19 PCA">Projet : ACP COVID-19</title>
   <link rel="stylesheet" href="../style.css">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' https://www.googletagmanager.com; style-src 'self' 'unsafe-inline'; img-src 'self' data:; frame-ancestors 'self';">
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+  <meta http-equiv="X-Frame-Options" content="DENY">
+  <meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 <body>
   <!-- Sélecteur de langue -->
